# sox

./: .gitignore  CMakeLists.txt  Makefile.am  README  README.md  README.osx  build_static_libs.ps1  build_static_libs.sh  configure.ac  sox.1  soxformat.7
libgsm/: CMakeLists.txt
lpc10/: CMakeLists.txt
msvc14/: .gitignore  LibFlac.vcxproj  LibGsm.vcxproj  LibId3Tag.vcxproj  LibLpc10.vcxproj  LibMad.vcxproj  LibMp3Lame.vcxproj  LibOgg.vcxproj  LibPng.vcxproj  LibSndFile.vcxproj  LibSndFileG72x.vcxproj  LibSndFileGSM610.vcxproj  LibSoX.vcxproj  LibSoX.vcxproj.filters  LibSpeex.vcxproj  LibSpeexDsp.vcxproj  LibVorbis.vcxproj  LibWavPack.vcxproj  LibZLib.vcxproj  SoX.sln  SoX.vcxproj
msvc14/SoX/: soxconfig.h
src/: CMakeLists.txt  Makefile.am  dither.c  effects.c  formats.c  formats.h  mp3-util.h  mp3.c  optional-fmts.am  pad.c  sdm.c  sdm.h  sox.c  sox.h  soxconfig.h.cmake  wav.c
